Violet Flame Portfolio 1st draft

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,6 +12,7 @@
     --font-lato: 'Lato', sans-serif;
     --font-poppins: 'poppins', sans-serif;
     --breakpoint-md: 1020px;
+    --breakpoint-timelineBP: 1004px;
 
 }
 
