changed contact section text spacing

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,6 +12,7 @@
 /*new teal c*/
 /*old teal #00bcd4*/
 /*1041 x 494 my loaner laptops fullscreen*/
+/*Note to Future Niko: Try out text-4xl for section titles*/
 @theme {
     --color-dark-purple-start: #370258;
     --color-dark-purple-end: #1a012f;
